# mini-alpaca

./: .gitignore  Cargo.toml  README.md
examples/: connect.rs  crypto.rs  news.rs  stream.rs  trades.rs
src/: common.rs  crypto.rs  endpoint.rs  lib.rs  news.rs  stock.rs  websocket.rs
src/clients/: crypto_client.rs  mod.rs  news_client.rs  stock_client.rs  websocket.rs
