[package]
name = "mini-alpaca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
url = "2"
